# peargent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: package-lock.json  package.json
docs/content/docs/: agents.mdx  examples.mdx  history.mdx  index.mdx  installation.mdx  meta.json  pools.mdx  quickstart.mdx  test copy.mdx  tools.mdx
docs/content/docs/Practical Playbooks/: meta.json
docs/src/: mdx-components.tsx
docs/src/app/(home)/: page.tsx
examples/: agents_pool.py  basic_example.py  parallel_tools_advanced.py  parallel_tools_basic.py  parallel_tools_direct_test.py  structured_output_advanced.py  structured_output_basic.py  structured_output_comparison.py  structured_output_nested.py  structured_output_validators_test.py  tool_error_handling_demo.py  tool_output_validation_demo.py  tool_retry_demo.py  tool_timeout_demo.py  verify_atlas.py
peargent/: __init__.py
peargent/_core/: agent.py  pool.py  tool.py
peargent/atlas/: __init__.py
peargent/core/: agent.py  pool.py  router.py  state.py  tool.py
peargent/history/: __init__.py
peargent/models/: base.py  groq.py
peargent/templates/: tools_prompt.j2
tests/: test_persona.py  test_smoke.py
